<resources>
    <string name="app_name" translatable="false">Shookisha</string>
    <string name="preference_file_key" translatable="false">com.example.shookisha.PREFERENCE_FILE_KEY</string>
    <string name="passwor">Password</string>
    <!-- Strings related to login -->
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username_password">Not a valid username or password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_timeout">Bad connection</string>
    <string name="connexion">LOGIN</string>
    <string name="btnforgetMdp">FORGOT YOUR PASSWORD ?</string>
    <string name="btnForgetSend">Send</string>
    <string name="btnForgetCancel">Cancel</string>
    <string name="new_compte">NOT A SHOOKISHA ACCOUNT?</string>
    <string name="login_empty_email">Please enter your email</string>
    <string name="login_password_empty">Enter The login or the password</string>
    <string name="message_no_connexion">No internet connection.</string>
    <string name="message_mdp_send">New password sent</string>
    <string name="message_email_incorrect">Invalid email</string>
    <string name="prompt_bouton_text_send">Send</string>
    <!-- jauge page -->
    <string name="distance_kilometre">%1$d \n Kms</string>
    <string name="label_text_perimetre_offre">Commercial proposal within a radius of x kms</string>
    <string name="save_perimetre_button">VALIDATE</string>
    <string name="message_dist">"I wish to receive commercial offers on a radius of "</string>
    <!-- profil page -->
    <string name="format_jour">DD</string>
    <string name="format_mois">MM</string>
    <string name="format_annee">YYYY</string>
    <string name="btn_profil">validate</string>
    <!--  Preference page -->
    <string name="label_list_cat">Categories of offers:</string>
    <!-- offre detail -->
    <string name="btn_generer_code">generate coupon</string>
    <string name="code_barre_Duree">"This coupon expires in %1$d "</string>
    <string name="coupon_expire_text">Coupon expired!</string>
    <string name="title_offre_detail">OFFERS IN DETAIL</string>
    <string name="duree_offre">Offer valid from %1$s to %2$s</string>
    <string name="duree_coupon">Once generated, this coupon has a duration %1$d</string>
    <!-- offre page -->
    <string name="label_select">Categories</string>
    <!-- tab pages activity -->
    <string name="title_activity_pages" translatable="false">PagesActivity</string>
    <string name="tabtext_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="derniere_position">last position not detected</string>
    <string name="btn_libere_coupon">free this coupon</string>
    <string name="label_date">Birth date : </string>
    <string name="mdp2">Password confirmation</string>
    <string name="message_resultat_list_offre">Please choose your preferences</string>
    <string name="mon_compte">my account</string>
    <string name="nom">Name</string>
    <string name="prenom">First name</string>
    <string name="prompt_email">Username or e-mail</string>
    <string name="prompt_password">Password</string>
    <string name="savepreference">Validate</string>
    <string name="tab_achat">MY PURCHASES</string>
    <string name="tab_infos">INFO</string>
    <string name="tab_offre">OFFERS</string>
    <string name="tab_panier">MY BASKET</string>
    <string name="tab_profil">MY PROFILE</string>
    <string name="text_code_barre_1">Bar code to present at checkout</string>
    <string name="title_perimetre">PERIMETER OF OFFERS</string>
    <string name="title_preference">PREFERENCES</string>
    <string name="titre_list_categori">Category</string>
    <string name="username_or_email">username or email</string>
    <string name="label_tutoriel">Tutorial</string>
    <string name="label_faq">FAQ</string>
    <string name="label_infos_legales">Legal information</string>
    <string name="label_titre_page_infos">Read more about shookisha</string>
    <!-- historique achat -->
    <string name="date_achat">Date purchase : %1$s </string>
    <string name="numero_codebarre_achat">Bar code number : %1$s </string>
    <!-- panier -->
    <string name="date_panier">Date : %1$s </string>
</resources>
