<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <LinearLayout
        android:id="@+id/mainActivityLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/infosUserDiv"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:background="@drawable/profil_background"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/p_nomPrenomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="nom prenom text"
                android:textColor="#FD0E0D0D" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/p_nomDateSexeDiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/infosUserDiv">

            <TextView
                android:id="@+id/titreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/vertShookisha"
                android:gravity="center"
                android:text="@string/mon_compte"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                tools:text="@string/mon_compte" />

            <EditText
                android:id="@+id/nomEditText"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:ems="10"
                android:hint="@string/nom"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/prenomEditText"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:ems="10"
                android:hint="@string/prenom"
                android:inputType="textPersonName" />

            <LinearLayout
                android:id="@+id/dateRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_date"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/jourEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/format_jour"
                    android:inputType="date"
                    android:maxLength="2" />

                <EditText
                    android:id="@+id/moisEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/format_mois"
                    android:inputType="date"
                    android:maxLength="2" />

                <EditText
                    android:id="@+id/anneeditText"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/format_annee"
                    android:inputType="date"
                    android:maxLength="4" />
            </LinearLayout>

            <Spinner
                android:id="@+id/genreSpinner"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailMdpDiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/p_nomDateSexeDiv">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/vertShookisha" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/profil_profil" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/profil_cadenas" />

                <EditText
                    android:id="@+id/mdpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/passwor"
                    android:inputType="textPassword" />
            </LinearLayout>

            <EditText
                android:id="@+id/mdpEditText2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/mdp2"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/validerProfil"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:layout_weight="1"
                android:background="@color/vertShookisha"
                android:text="@string/btn_profil"
                android:textColor="#FFFFFF" />

          <!--  <android.support.design.widget.FloatingActionButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:scaleType="center"
                app:backgroundTint="#00FFFFFF"
                app:maxImageSize="55dp"
                app:srcCompat="@drawable/logout"
                tools:visibility="gone" />-->

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>