<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerimetreActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnBackPerim"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/arrow" />

            <TextView
                android:id="@+id/titlePerimetre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toStartOf="@id/btnReg"
                android:layout_toEndOf="@id/btnBackPerim"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/title_perimetre"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btnReg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:background="#00FFFFFF"
                android:visibility="invisible"
                app:srcCompat="@drawable/preference_off" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row_jauge1"
            android:layout_width="match_parent"
            android:layout_height="354dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="5dp">

            <LinearLayout
                android:id="@+id/leftElement"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:background="@drawable/number1"
                android:gravity="center"
                android:orientation="vertical">

                <SeekBar
                    android:id="@+id/distanceSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"

                    android:layout_weight="1"
                    android:background="@drawable/jauge_seekbar"
                    android:max="100"
                    android:progress="5"
                    android:progressBackgroundTint="#00FFFFFF"
                    android:progressTint="#00FFFFFF"
                    android:rotation="90"
                    android:thumb="@drawable/perimetre_thumb" /><!-- android:layout_marginTop="220dp"-->
                <!--  <com.example.shookisha.CustomVerticalSeekbar
                      android:id="@+id/distanceSeekBar"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:background="@drawable/range1"
                      android:splitTrack="false"
                      android:thumb="@drawable/regulator" />-->

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rightElement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="3dp"
                android:paddingTop="10dp"
                android:paddingRight="3dp">

                <TextView
                    android:id="@+id/messageDisttextView"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/info_bulle"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/message_dist"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/kilometreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/cercle_km"
                    android:gravity="center"
                    android:text="@string/distance_kilometre"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/labelTextPerimetreOffre"
                    android:layout_width="107dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_regular"
                    android:maxLines="3"
                    android:text="@string/label_text_perimetre_offre"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_jauge2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/jaugemap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="map"
                android:scaleType="center"
                app:srcCompat="@drawable/jauge_map" />

            <Button
                android:id="@+id/savePerimetrebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/vertShookisha"
                android:text="@string/save_perimetre_button"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/jaugemap" />
        </LinearLayout>

    </LinearLayout>

  </LinearLayout>